--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ a {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
+	z-index: 100;
 }
 
 .social-discord img {
@@ -273,6 +274,7 @@ a {
 	z-index: 1;
 	left: 20px;
 	top: 0px;
+	cursor: pointer;
 }
 
 .social-discord h4 {
@@ -296,11 +298,85 @@ a {
 	flex-direction: column;
 	width: 100%;
 	position: relative;
-	top: 500px;
+	top: 800px;
 }
 
 .credit h4 {
-	color: white;
+	color: #707070;
 	font-family: 'Rubik';
 	letter-spacing: 1px;
+}
+
+.languages {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	flex-direction: column;
+	width: 100%;
+	position: relative;
+	top: 500px;
+}
+.languages h8 {
+	color: #7f53ad;
+	font-family: 'Comfortaa';
+	font-size: 70px;
+	text-shadow: 2px 2px black;
+	font-weight: bold;
+}
+
+.language h1 {
+	position: relative;
+	color: #deb8ff;
+	font-family: 'Comfortaa';
+}
+
+.language {
+	border: 2px solid #424242;
+	width: 20%;
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	flex-wrap: wrap;
+	flex-direction: column;
+	border-radius: 10px;
+	border-spacing: 10px;
+	background-color: #222;
+	height: 400px;
+	transition: transform .3s;
+}
+
+.language:hover {
+	transform: scale(1.05);
+}
+
+.language img {
+	border-radius: 20px;
+	width: 200px;
+	height: 200px;
+	position: relative;
+}
+
+.language h2 {
+	position: relative;
+	color: lightgray;
+	font-family: 'Rubik';
+	font-size: 15px;
+	text-align: center;
+	padding: 0 5px;
+}
+
+.language * {
+	align-self: center;
+}
+
+.languages-container {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	flex-direction: row;
+	width: 80%;
+	position: relative;
+	top: 50px;
+	column-gap: 95px;
+	row-gap: 50px;
 }
