--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ body {
 
 html, body {
 	height: 100%;
+	width: 100%;
 }
 
 .box {
@@ -141,11 +142,10 @@ a {
 }
 
 #scriptbox {
-	position: relative;
-	height: 90%;
-	width: 93%;
-	left: 20px;
-	margin: 30px;
+	position: absolute;
+	height: 94.5%;
+	width: 99vw;
+	left: .5vw;
 	border: 1px solid gray;
 	border-radius: 20px;
 }
@@ -156,6 +156,7 @@ a {
 	position: relative;
 	font-family: 'Comfortaa';
 	font-size: 50px;
+	width: 50vw;
 }
 
 #script-desc-text {
@@ -165,6 +166,7 @@ a {
 	top: -20px;
 	font-weight: lighter;
 	font-family: 'Rubik';
+	width: 50vw;
 }
 
 #script-desc {
@@ -174,16 +176,19 @@ a {
 	top: -30px;
 	font-weight: lighter;
 	font-family: 'Rubik';
+	margin: 0;
+	width: 70vw;
 }
 
 #script-download-text {
 	color: gray;
-	left: 25px;
-	top: 100px;
+	left: 1.5vw;
+	top: 10vh;
 	font-weight: lighter;
 	font-family: 'Rubik';
 	font-size: 35px;
 	position: relative;
+	width: 20vw;
 }
 
 
@@ -193,9 +198,10 @@ a {
 	font-weight: lighter;
 	text-decoration: underline;
 	position: relative;
-	top: 100px;
-	left: 75px;
+	top: 10vh;
+	left: 5vw;
 	cursor: pointer;
+	width: 30%;
 }
 
 ::-webkit-scrollbar {
@@ -328,11 +334,12 @@ a {
 	position: relative;
 	color: #deb8ff;
 	font-family: 'Comfortaa';
+	text-align: center;
 }
 
 .language {
 	border: 2px solid #424242;
-	width: 20%;
+	width: 18vw;
 	display: flex;
 	justify-content: center;
 	align-content: center;
@@ -351,8 +358,8 @@ a {
 
 .language img {
 	border-radius: 20px;
-	width: 200px;
-	height: 200px;
+	width: 8vw;
+	height: 8vw;
 	position: relative;
 }
 
@@ -360,7 +367,7 @@ a {
 	position: relative;
 	color: lightgray;
 	font-family: 'Rubik';
-	font-size: 15px;
+	font-size: 1em;
 	text-align: center;
 	padding: 0 5px;
 }
@@ -374,9 +381,9 @@ a {
 	align-items: center;
 	flex-wrap: wrap;
 	flex-direction: row;
-	width: 80%;
+	width: 80vw;
 	position: relative;
 	top: 50px;
-	column-gap: 95px;
-	row-gap: 50px;
+	column-gap: 2vw;
+	row-gap: 2vw;
 }
